field-forms/objects/Form_Template__c/Form_Template__c.object-meta.xml
<CustomObject>
    <label>Form Template</label>
    <nameField>
        <label>Form Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>