field-forms/objects/Form_Template__c/fields/Allow_Exception_Override__c.field-meta.xml
<CustomField>
    <fullName>Allow_Exception_Override__c</fullName>
    <description>Pillar 5 template-level default for exception overrides on blocking findings. Per-question Allow_Exception_Override__c on Form_Question_Catalog__c can override this for specific questions; when the catalog value is "Inherit" (default) this template setting applies.</description>
    <inlineHelpText>Allow lets techs clear blocking findings with just a reason. Require photo additionally requires a photo before the override stands. Disallow closes the override path globally for this template.</inlineHelpText>
    <label>Allow Exception Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allow</fullName>
                <default>true</default>
                <label>Allow</label>
            </value>
            <value>
                <fullName>Require photo</fullName>
            </value>
            <value>
                <fullName>Disallow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>