field-forms/objects/Form_Template__c/fields/Indicator_Type__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Type__c</fullName>
    <label>Indicator Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vertical</fullName>
            </value>
            <value>
                <fullName>Horizontal</fullName>
            </value>
            <value>
                <fullName>Path</fullName>
            </value>
            <value>
                <fullName>Bar</fullName>
            </value>
            <value>
                <fullName>VertNav</fullName>
            </value>
            <value>
                <fullName>Ring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>