field-forms/objects/Form_Template__c/fields/Max_Score__c.field-meta.xml
<CustomField>
    <fullName>Max_Score__c</fullName>
    <description>Sum of Form_Section__c.Max_Score__c for active sections in this template — the maximum achievable Linked_Form__c.Score__c. Denormalized for read perf and snapshotted onto Linked_Form__c.Max_Score__c at submission time so historical responses keep their original max even if the template is re-weighted later. Populated by the snapshot writer.</description>
    <label>Max Score</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>