field-forms/objects/Form_Template__c/fields/Page_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Page_Conditions__c</fullName>
    <description>Hold the condition JSON for pages to render</description>
    <label>Page Conditions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>