field-forms/objects/Form_Template__c/fields/Pages_JSON__c.field-meta.xml
<CustomField>
    <fullName>Pages_JSON__c</fullName>
    <label>Pages JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>