field-forms/objects/Form_Template__c/fields/Pass_Threshold_Percent__c.field-meta.xml
<CustomField>
    <fullName>Pass_Threshold_Percent__c</fullName>
    <description>Linked_Form__c.Score_Percent__c at or above this threshold marks the response as passed. Null means no overall pass/fail concept — Linked_Form__c.Passed__c stays false (formula treats null threshold as never-pass). Typical Steritech compliance threshold is 80%.</description>
    <label>Pass Threshold %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>