field-forms/objects/Form_Template__c/fields/Question_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Question_Conditions__c</fullName>
    <description>Holds the conditions for questions to render.</description>
    <label>Question Conditions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>