field-forms/objects/Form_Template__c/fields/Questions_JSON_1__c.field-meta.xml
<CustomField>
    <fullName>Questions_JSON_1__c</fullName>
    <description>Overflow Questions JSON structure</description>
    <label>Questions JSON 1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>