field-forms/objects/Form_Template__c/fields/Questions_JSON_2__c.field-meta.xml
<CustomField>
    <fullName>Questions_JSON_2__c</fullName>
    <label>Questions JSON 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>