field-forms/objects/Form_Template__c/fields/Questions_JSON__c.field-meta.xml
<CustomField>
    <fullName>Questions_JSON__c</fullName>
    <label>Questions JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>