field-forms/objects/Form_Template__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Partition key paired with Form_Question_Catalog__c.Scope__c — see that field's description for the architectural framing. A template's Scope__c determines which catalog entries are eligible for binding (null Scope on a catalog entry = globally available; matching string = same partition). v1 ships the field only; future write-side filtering enforces.</description>
    <label>Scope</label>
    <length>80</length>
    <type>Text</type>
</CustomField>