field-forms/objects/Form_Template__c/fields/Section_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Section_Conditions__c</fullName>
    <description>Holds the conditions for sections to render.</description>
    <label>Section Conditions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>