field-forms/objects/Form_Template__c/fields/Sections_JSON__c.field-meta.xml
<CustomField>
    <fullName>Sections_JSON__c</fullName>
    <label>Sections JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>