field-forms/objects/Form_Template__c/fields/Selector_Color__c.field-meta.xml
<CustomField>
    <fullName>Selector_Color__c</fullName>
    <label>Selector Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>#f56954</fullName>
            </value>
            <value>
                <fullName>#303641</fullName>
            </value>
            <value>
                <fullName>#0073b7</fullName>
            </value>
            <value>
                <fullName>#00c0ef</fullName>
            </value>
            <value>
                <fullName>#00a65a</fullName>
            </value>
            <value>
                <fullName>#00b29e</fullName>
            </value>
            <value>
                <fullName>#ba79cb</fullName>
            </value>
            <value>
                <fullName>#ec3b83</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>