field-forms/objects/Form_Template__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle / versioning state of the template. Draft = under construction in the builder, not surfaced to mobile sync; Active = published and eligible for sync/use; Retired = withdrawn from use but kept for history. Newly created, cloned, and imported templates start as Draft; the brand form-management hub flips Draft↔Active via Activate/Deactivate.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>